<resources>
    <string name="app_name">HopeRise</string>
    <string name="_10km">10km</string>
    <string name="_15km">15km</string>
    <string name="_5km">5km</string>
    <string name="a_password_reset_otp_will_be_sent_to_your_registered_email">A password reset OTP will be sent to your registered email.</string>
    <string name="abc_orphanage">ABC Orphanage</string>
    <string name="account">Account</string>
    <string name="accountNoteActivate">Your account will not be activate if you leave now.</string>
    <string name="activate_account">Activate Account</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="add_new_employee">add_new_employee</string>
    <string name="addEventFor">Add Event for %s</string>
    <string name="addOrphanage">Add Orphanage</string>
    <string name="all">All</string>
    <string name="already_have_an_account_n_log_in">Already have an account?\n Log In</string>
    <string name="application_submitted_date">Application submitted date:</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_qr_code">Attendance QR Code</string>
    <string name="attended">Attended:</string>
    <string name="attention">Attention</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="cancelAction">You have cancel the action</string>
    <string name="capture">Capture</string>
    <string name="category">Category</string>
    <string name="change_password">Change Password</string>
    <string name="chat_room">Chat Room</string>
    <string name="chew_hong_yu">Chew Hong Yu</string>
    <string name="chooseFromPhotos">Chose from photos</string>
    <string name="completed">Completed</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmDeletePhoto">Are you sure to delete this photo?</string>
    <string name="confirmLogOut">Are you sure want to log out?</string>
    <string name="convertFailed">Convert Failed!</string>
    <string name="current">Current</string>
    <string name="current_password">Current Password</string>
    <string name="dash">-</string>
    <string name="dataRestoreSucess">Data Restored Successfully~</string>
    <string name="date">Date</string>
    <string name="date_time">Date Time</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivated">Deactivated</string>
    <string name="delete">Delete</string>
    <string name="deletedPhoto">You have deleted the photo</string>
    <string name="description">Description</string>
    <string name="didntReceive">I didn\'t receive it</string>
    <string name="dismiss">Dismiss</string>
    <string name="don_t_have_an_account_nsign_up_now">Don\'t have an account?\nSign up Now!</string>
    <string name="edit">Edit</string>
    <string name="editVolProfile">Update Volunteer Profile</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="emailExist">Email exist! Try another one!</string>
    <string name="employee">Employee</string>
    <string name="employee_management">Employee Management</string>
    <string name="enter_message">Enter Message</string>
    <string name="enterValidEmail">Please enter new valid email!</string>
    <string name="error">Error</string>
    <string name="event">Event</string>
    <string name="event_date_u0026_time"><![CDATA[Event Date & Time:]]></string>
    <string name="event_history">Event History</string>
    <string name="event_id">Event ID:</string>
    <string name="event_maintenance">Event Maintenance</string>
    <string name="event_name">Event Name:</string>
    <string name="event_near_me">Event Near Me</string>
    <string name="eventAddSuccess">Event added successfully</string>
    <string name="eventDateTime">%s %s</string>
    <string name="eventDetails">Event Details</string>
    <string name="eventGallery">Event Gallery</string>
    <string name="eventListing">Event Listing</string>
    <string name="eventNearYou">Event Near You (within 10km)</string>
    <string name="eventSummaryReport">Event Summary</string>
    <string name="eventVolunteerList">Event Volunteer List</string>
    <string name="failSavePhoto">Something goes wrong. Failed to save photo</string>
    <string name="featureCameraUnavailable">This features is unavailable since the camera permission denied</string>
    <string name="featureFileUnavailable">This features is unavailable since the file permission denied</string>
    <string name="fillAllProfileDetail">Please filled up all your personal details!</string>
    <string name="fillEvery">Please fill in every field!</string>
    <string name="filter">Filter:</string>
    <string name="filter_by">Filter By:</string>
    <string name="filter_status">Filter Status:</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password_header">Forget Password</string>
    <string name="gallery">Gallery</string>
    <string name="go_to_event_page">Go to Event Page</string>
    <string name="go_to_orphanage_page">Go To Orphanage Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_5">5</string>
    <string name="hint_search_by_area_eg_kuala_lumpur">Search by area eg. Kuala Lumpur</string>
    <string name="hurray">Hurray!</string>
    <string name="ic_front_picture">IC Front Picture</string>
    <string name="id">ID</string>
    <string name="idWithDot">ID:</string>
    <string name="info">Information</string>
    <string name="informManager">Please be informed that your account has been deactivated by the manager!</string>
    <string name="invalidQR">Invalid QR Code! Please Try Again.</string>
    <string name="join">Join</string>
    <string name="join_hoperise_now">JOIN HOPERISE NOW!</string>
    <string name="kindly_submit_your_application_once_again">Kindly resubmit your application once again to participate in any events!</string>
    <string name="latitude">Latitude</string>
    <string name="leaveNow">Leave now?</string>
    <string name="list_by">List By</string>
    <string name="location">Location</string>
    <string name="log_in">Log In</string>
    <string name="logging">Logging In</string>
    <string name="login_now_to_continue_with_hoperise">Login now to continue with HopeRise!</string>
    <string name="login_now_with_your_new_password_to_continue_with_hoperise">Login now with your new password to continue with HopeRise!</string>
    <string name="logout">Logout</string>
    <string name="longitude">Longitude</string>
    <string name="manager">Manager</string>
    <string name="month">Month:</string>
    <string name="msgJoinedSuccess">You have successfully joined this event (%s)</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="name_of_event">Name of Event</string>
    <string name="new_password">New Password</string>
    <string name="noAuthority">"You don't have the authority of manage employees! "</string>
    <string name="noJoinEvent">You have not joined any event.</string>
    <string name="not_available">N/A</string>
    <string name="ok">OK</string>
    <string name="on_screen_report">On-Screen Report</string>
    <string name="one_step_closer">One Step Closer!</string>
    <string name="open_map">Open Map</string>
    <string name="opps">Opps!</string>
    <string name="optSent">An otp code was sent to your account\'s registered email on %s successfully ✨ \nUnblock your account now?</string>
    <string name="orphanage_maintenance">Orphanage Maintenance</string>
    <string name="orphanageAdded">Orphanage updated successfully</string>
    <string name="otpNoMatch">OTP mismatch, please try again!</string>
    <string name="ouh_oh">Ouh Oh!</string>
    <string name="participated_count">Participated Count:</string>
    <string name="participation">Participation</string>
    <string name="password">Password</string>
    <string name="password_reset_successfully">Password Reset Successfully!</string>
    <string name="passwordNotSave">Your password will not be reset if you leave now.</string>
    <string name="pending">Pending</string>
    <string name="photo">Photo</string>
    <string name="photo_desc">Photo %s under Event %s</string>
    <string name="photoDetails">Photo Details</string>
    <string name="photoUploaded">Photo %s has been uploaded</string>
    <string name="pick_image">pick image</string>
    <string name="please_enter_the_one_time_password_otp_that_we_ve_sent_to_your_email_to_confirm_your_reset_password_request">Please enter the One Time Password (OTP) that we\'ve sent to your email to confirm your reset password request.</string>
    <string name="please_enter_the_one_time_password_otp_that_we_ve_sent_to_your_email_to_unblock_your_account">Please enter the One Time Password (OTP) that we\'ve sent to your email to unblock your account.</string>
    <string name="please_enter_the_one_time_password_otp_that_we_ve_sent_to_your_email_to_verify_your_new_email">Please enter the One Time Password (OTP) that we\'ve sent to your email to verify your new email.</string>
    <string name="please_enter_the_one_time_password_otp_that_we_ve_sent_to_your_registered_email_to_activate_your_registered_account">Please enter the One Time Password (OTP) that we\'ve sent to your registered email to activate your registered account.</string>
    <string name="please_enter_your_hope_rise_account_s_registered_email">Please enter your Hope Rise account\'s registered email.</string>
    <string name="please_provide_a_front_ic_photo_and_a_selfie_photo_with_your_ic">Please provide a Front IC Photo and a Selfie Photo with your IC</string>
    <string name="please_specify_reason">Please specify reason</string>
    <string name="please_wait_patiently">Please wait patiently as the staff will update your status within 2 business days of your submission date!</string>
    <string name="profile">Profile</string>
    <string name="profile_reset_password">Please enter the One Time Password (OTP) that we\'ve sent to your email to confirm your reset password request.</string>
    <string name="profileUpdated">Profile updated successfully!</string>
    <string name="promptDeletePhotoConfirm">Are you sure to delete all the photos in this event?</string>
    <string name="promptQRScan">Scan the attendance QR code\n</string>
    <string name="promtEventName">Enter event name</string>
    <string name="qr_code">QR Code</string>
    <string name="QRCode">QR Code</string>
    <string name="reason_with_dot">Reason:</string>
    <string name="records">%d record(s)</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="reject">Reject</string>
    <string name="rejected">Rejected</string>
    <string name="remember_me">Remember Me</string>
    <string name="reportAccessWarning">Only active manager can view the event summary report</string>
    <string name="reset">Reset</string>
    <string name="reset_now">Reset Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="scan_again">Scan Again</string>
    <string name="scanned_result">Scanned Result</string>
    <string name="search">Search</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="status">Status:</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="update">Update</string>
    <string name="user_id">User ID:</string>
    <string name="username_">Username:</string>
    <string name="volunteer_required">Volunteer Required</string>
</resources>